<resources>

    <string name="app_name">人卫视频</string>
    <string name="home">首页</string>
    <string name="album">专辑</string>
    <string name="video">视频</string>
    <string name="rank">排行</string>
    <string name="rank_board">排行榜</string>
    <string name="find">发现</string>
    <string name="my">我</string>
    <string name="wonderfull">精彩不断</string>
    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="please_input">请输入视频名称</string>
    <string name="drawer_btn_rss">频道管理</string>
    <string name="subscribe_my_category">我的频道</string>
    <string name="subscribe_more_category">更多频道</string>
    <string name="subscribe_manager_category_info">单击增删频道</string>
    <string name="subscribe_manager_category_info_2">单击增删频道，长按拖拽排序</string>
    <string name="internet_fail_connect">无网络服务，请连接</string>
    <string name="new_recommend">最新推荐</string>
    <string name="more">更多</string>
    <string name="click_login">点击登录\n登录后您可以享受更多特权</string>
    <string name="login_priority">登录后您可以享受更多特权</string>
    <string name="offline_cache">离线缓存</string>
    <string name="play_record">播放历史</string>
    <string name="album_prompt">专辑提醒</string>
    <string name="collect">收藏</string>
    <string name="collected">已收藏</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="collect_sucess">收成功藏</string>
    <string name="add_watch_list">加入看单</string>
    <string name="cancel_watch_list">取消看单</string>
    <string name="add_watch_sucess">加入看单成功</string>
    <string name="added_watch_list">已加入</string>
    <string name="download">下载</string>
    <string name="message">消息</string>
    <string name="help_feedback">帮助与反馈</string>
    <string name="setting">设置</string>
    <string name="new_update">最近更新</string>
    <string name="teach_class">教学类</string>
    <string name="operation_class">手术类</string>
    <string name="relative_video">相关视频</string>
    <string name="relative_album">相关专辑</string>
    <string name="hot_video">热播榜</string>
    <string name="album_list">专辑列表</string>
    <string name="english_name">英文名：</string>
    <string name="medical_department">就诊科室：</string>
    <string name="common_symptom">常见症状：</string>
    <string name="common_cause">常见病因：</string>
    <string name="isInfect">传染性：</string>
    <string name="play_now">立即观看</string>
    <string name="play_continue">继续观看</string>
    <string name="addAlbum">收藏专辑</string>
    <string name="cancelAlbum">取消看单</string>
    <string name="cancel_prompt">取消提醒</string>
    <string name="play_list">播放列表</string>
    <string name="have_update">已更新至%1$d集</string>
    <string name="all">全部</string>
    <string name="video_class">分类</string>
    <string name="album_count">专辑（%1$d）</string>
    <string name="video_count">视频（%1$d）</string>
    <string name="label">标签：</string>
    <string name="video_play_detail">视频详情：</string>
    <string name="search_no_result">您搜索的内容不存在</string>
    <string name="hot_rank">热门排行</string>
    <string name="album_filter">专辑筛选</string>
    <string name="video_filter">视频筛选</string>
    <string name="admit_recommend_content">允许推荐内容</string>
    <string name="admit_not_wifi_cache">允许手机网络缓存</string>
    <string name="cache">缓存</string>
    <string name="auto_cache">自动缓存</string>
    <string name="cache_dir_set">缓存路径设置</string>
    <string name="clear_cache">清除缓存</string>
    <string name="detect_new_version">检测新版</string>
    <string name="IP_info">版权信息</string>
    <string name="no_content">暂无相关内容！</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="register">注册</string>
    <string name="remember_pwd">记住密码</string>
    <string name="account_hint">输入账号/邮箱</string>
    <string name="password_hint">输入密码</string>
    <string name="modify_password">修改密码</string>
    <string name="modify_password_sucess">修改密码成功</string>
    <string name="origin_password">原密码：</string>
    <string name="confirm_modify">确认修改</string>
    <string name="new_password">新密码：</string>
    <string name="new_password_confirm">新密码确认：</string>
    <string name="input_origin_pwd">请输入原密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="verify_code_hint">输入验证码</string>
    <string name="confirm">确定</string>
    <string name="input_correct_account_password">请输入正确用户名或密码！</string>
    <string name="input_account">请输入用户名！</string>
    <string name="input_password">请输入密码！</string>
    <string name="input_password_dismatch">两次输入的密码不一致！</string>
    <string name="verify_code_dismatch">请输入正确的验证码！</string>
    <string name="person_info">个人资料</string>
    <string name="person_photo">头像</string>
    <string name="person_nickname">昵称</string>
    <string name="person_gender">性别</string>
    <string name="person_birthday">生日</string>
    <string name="register_hint">注册即代表同意</string>
    <string name="protocal">协议</string>
    <string name="register_protocal">《人卫视频用户协议》</string>
    <string name="verify_code">验证码</string>
    <string name="cache_no">您还没有缓存视频</string>
    <string name="cache_no_prompt">在详情页可点击缓存按钮进行缓存</string>
    <string name="album_collect_no">您还没有收藏专辑</string>
    <string name="album_collect_no_prompt">在详情页可点击收藏专辑按钮进行收藏</string>
    <string name="video_collect_no">您还没有收藏视频</string>
    <string name="video_collect_no_prompt">在详情页可点击收藏视频按钮进行收藏</string>
    <string name="message_no">您还没有消息</string>
    <string name="message_no_prompt">快去开启观看之旅会有更多好消息</string>
    <string name="play_no">您还没有播放</string>
    <string name="play_no_prompt">快去开启观看之旅</string>
    <string name="administrator">管理员</string>
    <string name="delete">删除</string>
    <string name="delete_all">删除全部</string>
    <string name="expand_more">展开更多</string>
    <string name="withdrawal">收起</string>
    <string name="downloading">正在缓存</string>
    <string name="paused">已暂停</string>
    <string name="downloaded">缓存完成</string>
    <string name="start_download">开始缓存</string>
    <string name="cannot_cache">这个视频不能缓存！</string>
    <string name="have_cache">这个视频已经缓存！</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="please_login">请先登录！</string>
    <string name="joined">已加入</string>
    <string name="video_detail">视频详情：</string>
    <string name="operate_after_login">请先登录后操作</string>
    <string name="look_after_login">请先登录后查看</string>
    <string name="confirm_delete_all">您确定要删除全部？</string>
    <string name="has_new_version">检测到有新版本可以更新 </string>
    <string name="has_no_new_version">当前已是最新版本 </string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">滑动查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="account_name">账户名</string>
    <string name="register_time">注册日期</string>
    <string name="clear_cache_sucess">清除缓存成功</string>
    
    <!-- 下载路径 -->
    <string name="sdcard_changed">修改文件下载位置成功</string>
    <string name="sdcard_download_path">文件下载位置</string>
    <string name="sdcard_set_download_path_title">选择文件下载位置</string>
    <string name="sdcard_uncheck_tips">请选择文件下载位置</string>
    <string name="sdcard_unmount_tips">存储卡已移除，请插入存储卡</string>
    <string name="sdcard_ok">确定</string>
    <string name="sdcard_cancle">取消</string>
    <string name="sdcard_free_space">剩余空间%1$s</string>
    <string name="sdcard_nosdcard">找不到sdcard</string>
    <string name="download_location">"文件下载位置： %1$s"</string>
    <string name="setting_sd_warn_msg">选择该存储卡下载文件，卸载360云盘后，下载的文件将会同步删除，是否选择？</string>
    <string name="photo">头像</string>
    <string name="upload_photo">上传头像</string>
    <string name="upload_pic">上传多张图片</string>
    <string name="edit_personal_info">编辑个人资料</string>
    <string name="take_picture">拍照</string>
    <string name="select_local_picture">选择本地图片</string>
    <string name="cancel">取消</string>
    <string name="internet_fail_connect">网络连接失败?!</string>
    <string name="uploading">正在上传...</string>
    <string name="choose_upload">选择上传图片类型</string>
    <string name="upload_photo_success">上传头像成功</string>
    <string name="upload_photo_failure">上传头像失败</string>
    <string name="pause">暂停</string>
    <string name="begin">开始</string>

</resources>