<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:padding="0.0px" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:onClick="onBack"
            android:paddingLeft="15dp"
            android:paddingRight="5dp"
            android:src="@drawable/back2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/cache"
            android:textColor="@color/color_080808"
            android:textSize="19sp" />
          <TextView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:onClick="showItemDelete"
            android:text="@string/delete"
            android:textColor="@color/text_color_selector"
            android:textSize="17sp" />
    </RelativeLayout>

    <View
        android:id="@+id/title_divider"
        style="@style/horizontal_divider_5dp"
        android:layout_below="@id/title_layout" />

   <ListView
        android:id="@+id/list_view"
        android:layout_below="@id/title_divider"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/empty_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/cache_no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cache_no"
            android:textColor="@color/text_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cache_no_prompt"
            android:textColor="@color/color_998d89" />
    </LinearLayout>

</RelativeLayout>