<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <RelativeLayout
        android:id="@+id/search_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="24dp"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/search_icon" />

        <EditText
            android:id="@+id/search_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/search_icon"
            android:background="@null"
            android:hint="@string/please_input"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:textColor="@color/aa_black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/search_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="2dp"
            android:src="@drawable/search_clear"
            android:visibility="invisible" />
    </RelativeLayout>

    <View
        android:id="@+id/baseline"
        style="@style/search_edittext_baseline"
        android:layout_below="@id/search_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="65dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/cancel"
        android:textColor="@color/color_2c2c2c"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/album_video_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/baseline"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/album_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/album_count"
            android:textColor="@color/light_blue"
            android:textSize="16sp" />

        <View
            style="@style/vertical_divider_match"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/video_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/video_count"
            android:textColor="@color/color_2c2c2c"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        style="@style/horizontal_divider_5dp"
        android:layout_below="@id/album_video_title"
        android:visibility="gone" />

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        xmlns:ptr="http://schemas.android.com/apk/res-auto"
        android:id="@+id/search_album_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divider"
        android:cacheColorHint="#00000000"
        android:divider="@color/color_f2f2f2"
        android:dividerHeight="6dp"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:listSelector="#00000000"
        android:scrollbars="none"
        ptr:ptrAnimationStyle="flip"
        ptr:ptrListViewExtrasEnabled="false"
        ptr:ptrMode="pullFromEnd"
        ptr:ptrScrollingWhileRefreshingEnabled="true"
        ptr:ptrShowIndicator="false" />

    <LinearLayout
        android:id="@+id/video_listview_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divider"
        android:background="#ffffff"
        android:clickable="true"
        android:orientation="horizontal"
        android:visibility="gone" >

        <com.handmark.pulltorefresh.library.PullToRefreshListView
            xmlns:ptr="http://schemas.android.com/apk/res-auto"
            android:id="@+id/search_video_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="#00000000"
            android:divider="@color/color_f2f2f2"
            android:dividerHeight="6dp"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false"
            android:listSelector="#00000000"
            android:scrollbars="none"
            ptr:ptrAnimationStyle="flip"
            ptr:ptrListViewExtrasEnabled="false"
            ptr:ptrMode="pullFromEnd"
            ptr:ptrScrollingWhileRefreshingEnabled="true"
            ptr:ptrShowIndicator="false" />
    </LinearLayout>

</RelativeLayout>